--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,10 @@ code {
   width: 500px;
 }
 
+.progress-bar {
+  transition: width 1s linear;
+}
+
 @media screen and (max-width: 600px) {
   .title_banner {
     width: 80%;
